variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:5: error: '(' expected but identifier found.
  if estSurBiscuit(){
     ^RunHalf:8: error: '(' expected but identifier found.
  if estSurOrange(){
     ^RunHalf:11: error: illegal start of simple expression
} 
^