variables.RunHalf.scala.code
var nbBis:Int = 0
var nbOrange:Int = 0
while((2*nbBis)!=(caseOrange+1)){
  avance()
  if estSurBiscuit(){
    nbBis = nbBis + 1
  }
  if estSurOrange(){
    nbOrange = nbOrange + 1
  }
}